# transfermation

./: .gitignore  Dockerfile  Procfile  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  start.sh  tailwind.config.ts
ml-api/: requirements.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: scroll-indicator.tsx
src/components/: ConnectionStatus.tsx  Customizations.tsx  LoadingSpinner.tsx  MinutesInput.tsx  OutgoingMinutesSelector.tsx  PlayerCard.tsx  PlayerSearch.tsx  PlayerSelector.tsx  PredictionSection.tsx  TeamCard.tsx  TeamSearch.tsx  TeamSelector.tsx
src/components/ui/: button.tsx  input.tsx
src/lib/data/: bundesliga_2021_2022_team_clean.csv  bundesliga_2021_2022_team_merged.csv  bundesliga_2022_2023_team_clean.csv  bundesliga_2022_2023_team_merged.csv  bundesliga_2023_2024_team_clean.csv  bundesliga_2023_2024_team_merged.csv  bundesliga_2024_2025_team_clean.csv  bundesliga_2024_2025_team_merged.csv  fbref_clean_2021_2022.csv  fbref_clean_2022_2023.csv  fbref_clean_2023_2024.csv  fbref_clean_2024_2025.csv  fbref_merged_2021_2022.csv  fbref_merged_2022_2023.csv  fbref_merged_2023_2024.csv  fbref_merged_2024_2025.csv  la-liga_2021_2022_team_clean.csv  la-liga_2021_2022_team_merged.csv  la-liga_2022_2023_team_clean.csv  la-liga_2022_2023_team_merged.csv  la-liga_2023_2024_team_clean.csv  la-liga_2023_2024_team_merged.csv  la-liga_2024_2025_team_clean.csv  la-liga_2024_2025_team_merged.csv  ligue-1_2021_2022_team_clean.csv  ligue-1_2021_2022_team_merged.csv  (+22 more)
src/types/: index.ts  nextui.d.ts
(+23 files in other folders)
