[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "transfermation-api"
version = "0.1.0"
description = "Transfermation API"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "numpy==1.24.3",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
]
